--- a/index.html
+++ b/index.html
@@ -4,226 +4,301 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Elmira Iskakova Portfolio</title>
-
-    <link rel="stylesheet" href="styles.css" />
-    <script src="script.js" defer></script>
   </head>
   <body>
-    <header class="navbar">
-      <div id="toggle"></div>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+      <div class="container">
+        <a href="#" class="navbar-brand">Elmira Iskakova</a>
 
-      <div id="sidebar">
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#projects" class="nav-link">Projects</a>
+            </li>
+            <li class="nav-item">
+              <a href="#skills" class="nav-link">My skills</a>
+            </li>
+            <li class="nav-item">
+              <a href="#about" class="nav-link">About me</a>
+            </li>
+            <li class="nav-item">
+              <a href="#recommendations" class="nav-link">Recommendations</a>
+            </li>
+          </ul>
+        </div>
       </div>
-    </header>
+    </nav>
 
-    <main>
-      <section id="hero">
-        <h1>Elmira Iskakova Portfolio</h1>
-      </section>
-
-      <section id="projects">
-        <div class="title">
-          <h2>My projects</h2>
-          <button class="cta">
-            <a href="https://github.com/Mira-Iskakova" target="_blank"
-              >see more</a
-            >
-          </button>
-        </div>
-
-        <div class="proj-container">
-          <div class="proj proj1">
-            <a
-              href="https://mira-iskakova.github.io/Landing-Page-Bootstrap/"
-              target="_blank"
-              ><button>Live preview</button></a
-            >
-            <a
-              href="https://github.com/Mira-Iskakova/Landing-Page-Bootstrap"
-              target="_blank"
-              ><button>The code</button></a
-            >
-          </div>
-          <div class="proj proj2">
-            <a href="https://github.com/Mira-Iskakova/Pong-Game" target="_blank"
-              ><button>Live preview</button></a
-            >
-            <a
-              href="https://github.com/Mira-Iskakova/Pong-Game/blob/main/pong.py"
-              target="_blank"
-              ><button>The code</button></a
-            >
-          </div>
-          <div class="proj proj3">
-            <a
-              href="https://mira-iskakova.github.io/Calculator/"
-              target="_blank"
-              ><button>Live preview</button></a
-            >
-            <a
-              href="https://github.com/Mira-Iskakova/Calculator"
-              target="_blank"
-              ><button>The code</button></a
-            >
-          </div>
-
-          <div class="text">
-            <h3>Product Landing Page</h3>
-            <p>
-              This is a multi-purpose landing page built by using HTML5, CSS3,
-              Javascript, and Bootstrap.
+    <!-- Hero -->
+    <section class="bg-dark text-light p-5 text-center text-sm-start">
+      <div class="container">
+        <div class="d-sm-flex align-items-center justify-content-between">
+          <div>
+            <h1>
+              I'm Elmira, a
+              <span class="text-warning">Frontend Developer.</span>
+            </h1>
+            <p class="lead my-4">
+              From the moment I produced "Hello World" in the console of my
+              first application, I knew I was hooked into the world of software
+              development.
             </p>
+            <button class="btn btn-primary btn-lg">Get in touch!</button>
           </div>
-          <div class="text">
-            <h3>Pong Game</h3>
-            <p>
-              A simple classic pong game built with Python and it's Turtle
-              module.
-            </p>
-          </div>
-          <div class="text">
-            <h3>Calculator</h3>
-            <p>
-              This project is a calculator that was created using HTML5, CSS3,
-              and JavaScript.
-            </p>
-          </div>
+          <img
+            class="img-fluid w-50 d-none d-sm-block"
+            src="img/showcase.svg"
+            alt="A girl sitting in front of the computer"
+          />
         </div>
-      </section>
+      </div>
+    </section>
 
-      <section id="about">
-        <img src="images/about.jpg" alt="about image" />
-
-        <div class="about-text">
-          <h2>Hi! I'm Elmira.</h2>
-          <p>
-            While working as a business development consultant in early 2020, I
-            was introduced to programming by a close friend. I've always been
-            curious about software development but after taking a few
-            freeCodeCamp courses and creating a product landing page from
-            scratch, I was oficially hooked. Not only was it intellectually
-            stimulating but it was the first time I found myself doing something
-            I loved.
-          </p>
-        </div>
-      </section>
-
-      <section id="skills">
-        <h2>What I Use</h2>
-        <div class="icons">
-          <div class="item">
-            <img src="images/html5.png" alt="html5 icon" />
-            <p>HTML5</p>
-          </div>
-
-          <div class="item">
-            <img src="images/css3.png" alt="css3 icon" />
-            <p>CSS3</p>
-          </div>
-
-          <div class="item">
-            <img src="images/javascript.png" alt="js icon" />
-            <p>Javascript</p>
-          </div>
-
-          <div class="item">
-            <img src="images/bootstrap.png" alt="bootstrap icon" />
-            <p>Bootstrap</p>
-          </div>
-
-          <div class="item">
-            <img src="images/python.png" alt="python icon" />
-            <p>Python</p>
-          </div>
-
-          <div class="item">
-            <img src="images/git.png" alt="git icon" />
-            <p>Git</p>
-          </div>
-        </div>
-      </section>
-
-      <section id="contact">
-        <h2>Let's talk!</h2>
-
-        <div>
-          <form action="POST" data-netlify="true">
-            <label for="fname">First Name</label>
-            <input
-              type="text"
-              id="fname"
-              name="firstname"
-              placeholder="Your name.."
-            />
-
-            <label for="lname">Last Name</label>
-            <input
-              type="text"
-              id="lname"
-              name="lastname"
-              placeholder="Your last name.."
-            />
-
-            <label for="email">Email address</label>
-            <input
-              type="email"
-              id="email"
-              name="email"
-              placeholder="Your email address.."
-              required
-            />
-
-            <label for="subject">Message</label>
-            <textarea
-              id="subject"
-              name="subject"
-              placeholder="Write something.."
-              style="height: 200px"
-            ></textarea>
-
-            <div class="field">
-              <div data-netlify-recaptcha="true"></div>
+    <!-- Projects -->
+    <section id="projects" class="p-5">
+      <div class="container">
+        <div class="row text-center g-4">
+          <h2>Projects</h2>
+          <div class="col-md">
+            <div class="card mx-auto" style="width: 18rem">
+              <img
+                src="img/landing-page.png"
+                class="card-img-top img-fluid"
+                alt="Landing page project"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Product Landing Page</h5>
+                <p class="card-text">
+                  This is a multi-purpose landing page built by using HTML5,
+                  CSS3, Javascript, and Bootstrap.
+                </p>
+                <a href="#" class="btn btn-primary my-3">Live preview</a>
+                <a href="#" class="btn btn-primary">The code</a>
+              </div>
             </div>
-
-            <input class="cta" type="submit" value="Send" />
-          </form>
+          </div>
+          <div class="col-md">
+            <div class="card mx-auto" style="width: 18rem">
+              <img
+                src="img/pong.png"
+                class="card-img-top img-fluid"
+                alt="Pong game project"
+                style="height: 150px; width: auto"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Pong Game</h5>
+                <p class="card-text">
+                  A simple classic pong game built with Python and it's Turtle
+                  module.
+                </p>
+                <a href="#" class="btn btn-primary my-3">Live preview</a>
+                <a href="#" class="btn btn-primary">The code</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-md">
+            <div class="card mx-auto" style="width: 18rem">
+              <img
+                src="img/calculator.png"
+                class="card-img-top img-fluid"
+                alt="Calculator project"
+                style="height: 150px; width: auto"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Calculator</h5>
+                <p class="card-text">
+                  This project was created using HTML5, CSS3, and JavaScript.
+                </p>
+                <a href="#" class="btn btn-primary my-3">Live preview</a>
+                <a href="#" class="btn btn-primary">The code</a>
+              </div>
+            </div>
+          </div>
         </div>
-      </section>
-    </main>
-
-    <footer>
-      <div class="left">
-        <h4><a href="index.html">portfolio.</a></h4>
-
-        <ul class="left-links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#skills">Skills</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
       </div>
+    </section>
 
-      <div class="right">
-        <div class="right-links">
-          <a href="https://www.linkedin.com/in/elmira-iskakova/" target="_blank"
-            ><img class="socials" src="images/linkedin.svg" alt="LinkedIn logo"
-          /></a>
-          <a href="https://github.com/Mira-Iskakova" target="_blank"
-            ><img class="socials" src="images/github.svg" alt="Github logo"
-          /></a>
+    <!-- Skills -->
+    <section id="skills" class="p-5">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md">
+            <img
+              src="img/fundamentals.svg"
+              class="img-fluid"
+              alt="Fundamental skills icons"
+            />
+          </div>
+          <div class="col-md p-5">
+            <h2>What I Use</h2>
+            <p class="lead" style="font-size: 1.5rem">
+              HTML5 | CSS3 | JavaScript | Bootstrap | BEM | Python
+            </p>
+          </div>
         </div>
+      </div>
+    </section>
 
-        <p>&copy 2022 | Elmira Iskakova</p>
+    <!-- About -->
+    <section id="about" class="p-5 bg-dark text-light">
+      <div class="container">
+        <div class="row align-items-center justify-content-between">
+          <div class="col-md p-3">
+            <h2>Who I am</h2>
+            <p class="lead">
+              While working as a business development consultant in early 2020,
+              I was introduced to programming by a close friend. I've always
+              been curious about software development but after taking a few
+              freeCodeCamp courses and creating my own projects from scratch, I
+              was oficially hooked. Not only was it intellectually stimulating,
+              but it was the first time I found myself doing something I loved.
+            </p>
+            <p class="lead">
+              Since being introduced to programming I have read through as much
+              material as one can possibly go through, taken classes online and
+              created a portfolio of applications. I have truly discovered my
+              passion in life.
+            </p>
+          </div>
+          <div class="col-md">
+            <img
+              src="img/about.svg"
+              class="img-fluid"
+              alt="Fundamental skills icons"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Recommendations -->
+    <section id="recommendations" class="p-5 bg-primary">
+      <div class="container">
+        <h2 class="text-center text-white mb-5">Recommendations</h2>
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-4">
+            <div class="card bg-light" style="height: 31rem">
+              <div class="card-body text-center">
+                <img
+                  class="rounded-circle mb-3"
+                  src="img/liya.jpg"
+                  alt="Liya's photo"
+                  style="width: 150px"
+                />
+                <h3 class="card-title mb-3">Liya Cetiner</h3>
+                <a href="https://www.linkedin.com/in/jrakhila/" target="_blank">
+                  <img class="text-dark mx-1" src="img/linkedin.svg" alt=""
+                /></a>
+                <p class="card-text px-5 py-2" style="text-align: justify">
+                  I know Elmira for more than 5 years and we worked on
+                  on-and-off basis on numerous projects including Examizy. So I
+                  can describe her as a very kind and goal oriented
+                  professional. She always completes tasks on time and faultless
+                  and she always delivers an extra mile. She is dedicated to a
+                  project until completion with perfection.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="card bg-light" style="height: 31rem">
+              <div class="card-body text-center">
+                <img
+                  class="rounded-circle mb-3"
+                  src="img/cart.jpg"
+                  alt="Cart's photo"
+                  style="width: 150px"
+                />
+                <h3 class="card-title mb-3">Cartojos Cerino</h3>
+                <a
+                  href="https://www.linkedin.com/in/cartojoscerino/"
+                  target="_blank"
+                >
+                  <img
+                    class="text-dark mx-1"
+                    src="img/linkedin.svg"
+                    alt="linkedin icon"
+                /></a>
+                <p class="card-text px-5 py-2" style="text-align: justify">
+                  Elmira is a great team member and will help others as much as
+                  possible. She is a positive employee who enjoys challenging
+                  tasks that help her continue to learn. She has the dedication
+                  and drive to meet and exceed your high standards.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-6 col-lg-4">
+            <div class="card bg-light" style="height: 31rem">
+              <div class="card-body text-center">
+                <img
+                  class="rounded-circle mb-3"
+                  src="img/elena.jpg"
+                  alt="Elena's photo"
+                  style="width: 150px"
+                />
+                <h3 class="card-title mb-3">Elena Popovici</h3>
+                <a
+                  href="https://www.linkedin.com/in/elena-popovici-86473249/"
+                  target="_blank"
+                >
+                  <img
+                    class="text-dark mx-1"
+                    src="img/linkedin.svg"
+                    alt="linkedin icon"
+                /></a>
+                <p class="card-text px-5 py-2" style="text-align: justify">
+                  I worked with Elmira at Bahcesehir University International
+                  Office and she was an outstanding team member; reliable,
+                  hardworking and very focused on delivering more than is
+                  expected of her in her duties.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="p-5 bg-dark text-white text-center">
+      <div class="container">
+        <p class="lead">Copyright &copy; 2022 Elmira Iskakova</p>
+
+        <!-- <a href="#" class="position-absolute bottom-0 end-0 p-5">
+          <i class="bi bi-arrow-up-circle h1"></i>
+        </a> -->
       </div>
     </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
